# gen-indices

./: .tmuxinator.yml  Cargo.toml  LICENSE  MD.md  README.org
src/: lib.rs
